making form visible and fixed css form layout bug

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -655,9 +655,10 @@ body {
   grid-template-columns: 1fr 1fr;
   gap: 4rem 6rem;
 }
+
 .upload__column {
   display: grid;
-  grid-template-columns: 1fr 2.8fr;
+  /* grid-template-columns: 1fr 2.8fr; */
   align-items: center;
   gap: 1.5rem;
 }
@@ -694,6 +695,8 @@ body {
   grid-column: -1;
 }
 .upload__btn {
-  grid-column: -1;
+  /* grid-column: -1; */
+  grid-column: 1 / span 2;
   justify-self: center;
+  width: auto;
 }
